--- a/starter_code/blog.html
+++ b/starter_code/blog.html
@@ -5,6 +5,11 @@
     	<meta name="description" content="The perfect personal assistant. Relaxr does your job for you so you can enjoy life as it is meant to be.">
 
 		<title>Relaxr Blog</title>
+		<!--
+			Don't forget to put the meta viewport tag in all of your HTML files - otherwise
+			your media queries will not work!
+		-->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
 
 		<!-- external CSS link -->
